media/radarr4k/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr4k
  namespace: media
  annotations:
    flux.weave.works/tag.radarr4k: glob:amd64-*-ls*
    flux.weave.works/automated: 'true'
spec:
  replicas: 1
  selector:
    matchLabels:
      app: radarr4k
  template:
    metadata:
      labels:
        app: radarr4k
    annotations:
      linkerd.io/inject: enabled
    spec:
      volumes:
      - name: radarr4k
        iscsi:
          iqn: iqn.2014-09.com.radoncanyon:nas1:radarr4k
          targetPortal: 192.168.220.149
          lun: 1
          fsType: ext4
      - name: media
        persistentVolumeClaim:
          claimName: media
      containers:
      - name: radarr4k
        image: linuxserver/radarr:amd64-v0.2.0.1293-ls12
        volumeMounts:
        - name: radarr4k
          subPath: config
          mountPath: /config
        - name: media
          mountPath: /media
        ports:
        - name: radarr
          containerPort: 7878
        readinessProbe:
          tcpSocket:
            port: radarr
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: radarr
          initialDelaySeconds: 15
          periodSeconds: 20
