media/radarr4k/sts.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: radarr4k
  namespace: media
  annotations:
    fluxcd.io/automated: 'true'
    fluxcd.io/tag.radarr4k: 'regex:^3\.[0-9\.]+-ls[0-9]+$'
spec:
  serviceName: radarr4k
  replicas: 1
  selector:
    matchLabels:
      app: radarr4k
  template:
    metadata:
      labels:
        app: radarr4k
    spec:
      volumes:
      - name: radarr4k
        iscsi:
          iqn: iqn.2014-09.com.radoncanyon:nas1:radarr4k
          targetPortal: 192.168.220.149
          lun: 1
          fsType: ext4
      - name: media
        persistentVolumeClaim:
          claimName: media
      containers:
      - name: radarr4k
        image: linuxserver/radarr:3.0.0.3391-ls19
        volumeMounts:
        - name: radarr4k
          subPath: config
          mountPath: /config
        - name: media
          mountPath: /media
        ports:
        - name: radarr
          containerPort: 7878
        readinessProbe:
          tcpSocket:
            port: radarr
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: radarr
          initialDelaySeconds: 15
          periodSeconds: 20
