media/radarr4k/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: radarr4k
  namespace: media
  annotations:
    nginx.ingress.kubernetes.io/auth-url: "https://login.desertbluffs.com/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://login.desertbluffs.com/oauth2/start?rd=https://$host$request_uri"
spec:
  tls:
  - hosts:
    - j.desertbluffs.com
  rules:
  - host: j.desertbluffs.com
    http:
      paths:
      - path: /
        backend:
          serviceName: radarr4k
          servicePort: radarr4k
