media/radarr4k/networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: radarr4k
  namespace: media
spec:
  podSelector:
    matchLabels:
      app: radarr4k
  ingress:
  - ports:
    - port: 7878
    from:
    - namespaceSelector:
        matchLabels:
          name: ingress-nginx
